# platform-ndk

./: ndkgdb.py  ndkstack.py  pyproject.toml  qa_config.json
docs/: BuildSystemMaintainers.md
docs/changelogs/: Changelog-r26.md  Changelog-r27.md
meta/: abis.json  platforms.json
ndk/: abis.py  archive.py  autoconf.py  builds.py  checkbuild.py  config.py  platforms.py  pythonenv.py  run_tests.py  toolchains.py  workqueue.py
ndk/ext/: subprocess.py  test_subprocess.py
ndk/test/: builder.py  devices.py  printers.py  test_devices.py
ndk/test/buildtest/: case.py
ndk/test/devicetest/: scanner.py
ndk/testing/: builders.py  flag_verifier.py
ndk/tools/: ndkgitprebuilts.py
sources/crt/: crtbrand.S
tests/device/asan-smoke/: test_config.py
tests/device/b8708181-Vector4/jni/: Vector4.cpp
tests/device/clone/jni/: Android.mk
tests/device/emutls-key-deletion/jni/: dlclose_main.cpp
tests/device/hwasan-smoke/: test_config.py
tests/device/hwasan-smoke/jni/: Android.mk
tests/device/memtag-smoke/: CMakeLists.txt  test_config.py
tests/device/memtag-smoke/jni/: Android.mk  mte_oob_test.cc
tests/device/openmp/jni/: fib.c
tests/device/test-cpufeatures/jni/: test_cpufeatures.c
tests/device/tsan_smoke/: test_config.py
tests/pytest/ndkstack/: test_ndkstack.py  test_systemtest.py
tests/pytest/ndkstack/files/: invalid_unicode_log.txt
